@@ -2,7 +2,6 @@
 
 """
 lsl.common - Common information for the LSL package.  Including:
- * warns    - deprecation and experimental feature warnings, 
  * paths    - paths to the module and its data directories, 
  * dp       - information about the DP system, 
  * mcs      - information about the station at large, 
